syntax = "proto3";
option go_package = "github.com/penumbra-zone/penumbra/proto/go-proto";

package penumbra.core.governance.v1alpha1;

// A vote on a proposal.
message Vote {
  // A vote.
  enum Vote {
    ABSTAIN = 0;
    YES = 1;
    NO = 2;
    NO_WITH_VETO = 3;
  }

  // The vote.
  Vote vote = 1;
}

// A chain parameter that can be modified by governance.
message MutableChainParameter {
    // The identifier of the parameter, used for submitting change proposals.
    string identifier = 1;
    // A textual description of the parameter and valid values.
    string description = 2;
}

// The current state of a proposal.
message ProposalState {
    // Voting is in progress and the proposal has not yet concluded voting or been withdrawn.
    message Voting {}

    // The proposal has been withdrawn but the voting period is not yet concluded.
    message Withdrawn {
        // The reason for the withdrawal.
        string reason = 1;
    }

    // The voting period has ended, and the proposal has been assigned an outcome.
    message Finished {
        ProposalOutcome outcome = 1;
    }

    // The state of the proposal.
    oneof state {
        Voting voting = 2;
        Withdrawn withdrawn = 3;
        Finished finished = 4;
    }
}

// The outcome of a concluded proposal.
message ProposalOutcome {
    // The proposal was passed.
    message Passed {}

    // The proposal did not pass.
    message Failed {
        // The proposal was withdrawn during the voting period.
        optional string withdrawn_with_reason = 1;
    }

    // The proposal did not pass, and was vetoed.
    message Vetoed {
        // The proposal was withdrawn during the voting period.
        optional string withdrawn_with_reason = 1;
    }

    oneof outcome {
        Passed passed = 1;
        Failed failed = 2;
        Vetoed vetoed = 3;
    }
}

// A list of proposal ids.
message ProposalList {
    repeated uint64 proposals = 1;
}